--- a/Project.toml
+++ b/Project.toml
@@ -14,3 +14,8 @@ OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 
 [compat]
 Images = "0.25"
+ColorSchemes = "3"
+GeometryBasics = "0.4"
+DataStructures = "0.18"
+Makie = "0.16"
+Observables = "0.4"
