--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,19 +22,30 @@ jobs:
           - 'nightly'
         os:
           - ubuntu-latest
+          - macOS-latest
         arch:
           - x64
+          - x86
     steps:
-      - uses: actions/checkout@v2
-      - uses: julia-actions/setup-julia@v1
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Julia
+        uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
-      - uses: julia-actions/cache@v1
-      - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-runtest@v1
 
-      - run: julia --color=yes --project=. test/coverage.jl
+      - uses: julia-actions/cache@v1
+
+      - name: Build package
+        uses: julia-actions/julia-buildpkg@v1
+
+      - name: Run tests
+        uses: julia-actions/julia-runtest@v1
+
+      - name: Upload coverage
+        run: julia --color=yes --project=. test/coverage.jl
         working-directory: ${{ github.workspace }}
         env:
           COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
@@ -45,7 +56,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
         with:
-          version: '1'
+          version: '1.7'
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-docdeploy@v1
         env:
