--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,10 +48,12 @@ jobs:
         uses: julia-actions/julia-runtest@v1
 
       - name: Upload coverage
-        run: julia --color=yes --project=. test/coverage.jl
-        working-directory: ${{ github.workspace }}
-        env:
-          COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+        uses: coverallsapp/github-action@master
+        with:
+          path-to-lcov: lcov.info
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          flag-name: run${{ matrix.os }}-${{ matrix.version }}-${{ matrix.arch }}
+          parallel: true
   docs:
     name: Documentation
     runs-on: ubuntu-latest
