fix(CI): Coveralls-coverage finish

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -73,3 +73,13 @@ jobs:
             using ANT
             DocMeta.setdocmeta!(ANT, :DocTestSetup, :(using ANT); recursive=true)
             doctest(ANT)'
+  finish:
+    needs: test
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Coveralls Finished
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          parallel-finished: true
