--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Run tests
         uses: julia-actions/julia-runtest@v1
 
+      - name: Process coverage
+        uses: julia-actions/julia-processcoverage@v1
+
       - name: Upload coverage
         uses: coverallsapp/github-action@master
         with:
