fix(CI): exclude nightly 84x architecture

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,6 +29,9 @@ jobs:
         exclude:
           - os: macOS-latest
             arch: x86
+          - os: ubuntu-latest
+            version: 'nightly'
+            arch: x86
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
