--- a/Project.toml
+++ b/Project.toml
@@ -13,10 +13,10 @@ Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 
 [compat]
-Images = "0.25"
 ColorSchemes = "3"
-GeometryBasics = "0.4"
 DataStructures = "0.18"
+GeometryBasics = "0.4"
+Images = "0.25"
 Makie = "0.16"
-Observables = "0.4"
+Observables = "0.4, 0.5"
 OffsetArrays = "1"
