--- a/Project.toml
+++ b/Project.toml
@@ -20,5 +20,6 @@ DataStructures = "0.18"
 GeometryBasics = "0.4"
 Images = "0.25"
 Makie = "0.16"
+MakieCore = "0.2"
 Observables = "0.4, 0.5"
 OffsetArrays = "1"
