--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,6 @@ DataStructures = "0.18"
 GeometryBasics = "0.4"
 Images = "0.25"
 Makie = "0.16"
-MakieCore = "0.2"
+MakieCore = "0.2, 0.3"
 Observables = "0.4, 0.5"
 OffsetArrays = "1"
