--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MakieCore = "20f20a25-4f0e-4fdf-b5d1-57303727442b"
 Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
@@ -20,7 +21,7 @@ ColorTypes = "0.11"
 DataStructures = "0.18"
 GeometryBasics = "0.4"
 Images = "0.25"
-MakieCore = "0.2, 0.3"
 Makie = "0.16, 0.17"
+MakieCore = "0.2, 0.3"
 Observables = "0.4, 0.5"
 OffsetArrays = "1"
