--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,4 +1,4 @@
 [deps]
-ANT = "ceb03c83-0333-401c-8551-e914caf70f65"
+ImageSequenceAnnotationRecipes = "ceb03c83-0333-401c-8551-e914caf70f65"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
