feat(attributes, test): attributes to run on Attributes and GLMakie test

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,10 +22,9 @@ jobs:
           - 'nightly'
         os:
           - ubuntu-latest
-          - macOS-latest
+          # - macOS-latest
         arch:
           - x64
-          - x86
         exclude:
           - os: macOS-latest
             arch: x86
@@ -37,17 +36,24 @@ jobs:
 
       - name: Setup Julia
         uses: julia-actions/setup-julia@v1
+        env:
+          cache-name: chache-artifacts
         with:
+          path: ~/.julia/artifacts
+          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-
+            ${{ runner.os }}-
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
+      - run: sudo apt-get update && sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev
+      - run: DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --project=@. -e 'using Pkg; Pkg.test(coverage=true)'
 
       - uses: julia-actions/cache@v1
 
       - name: Build package
         uses: julia-actions/julia-buildpkg@v1
-
-      - name: Run tests
-        uses: julia-actions/julia-runtest@v1
 
       - name: Process coverage
         uses: julia-actions/julia-processcoverage@v1
